# whale-backend

./: .env.example  .envrc  README.md  pyproject.toml
.github/workflows/: CI.yml
app/: main.py
app/api/: inference.py
app/api/inference/: create.py  use.py
app/connectors/: orm.py  turso.py
app/controllers/: application.py  entry.py  feeedback.py  message.py  user.py
app/exceptions/: exception.py
app/models/: application.py  feedback.py  inference.py  message.py  reverse.py  types.py  user.py  utils.py
app/models/application/: base.py  build.py  select.py  validate.py
app/models/inference/: create.py  use.py
app/models/message/: create.py  reverse.py  shared.py  use.py
app/models/stores/: application.py  base.py  dynamic.py  entry.py  feedback.py  user.py
app/services/: application.py  entry.py  feedback.py  message.py  user.py
app/stores/base/: internal.py  main.py  object.py
app/stores/sqls/: create_application.sql  create_entry.sql  template.py
app/stores/utils/: frontend_message.py  process.py
