[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jinyang628 <chenjinyang4192@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
libsql-client = "^0.3.1"
install = "^1.3.5"
sqlalchemy-libsql = "^0.1.0"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
